Revert "Prevent the primary hero image from changing its size on smalle… (#9015)"
This reverts commit be709bdc3d8305fbd4f710b5b54423317a1157c4.

--- a/src/amo/components/HeroRecommendation/styles.scss
+++ b/src/amo/components/HeroRecommendation/styles.scss
@@ -43,7 +43,6 @@
 
 .HeroRecommendation-info {
   display: flex;
-  flex: 1 1 0;
   flex-direction: column;
 
   @include respond-to(medium) {
@@ -52,20 +51,10 @@
 
   @include respond-to(extraLarge) {
     @include margin-start(96px);
-
-    flex: 1;
   }
 
   @include respond-to(extraExtraLarge) {
     @include margin-start(132px);
-  }
-}
-
-.HeroRecommendation-image-container {
-  flex: 1 1 0;
-
-  @include respond-to(extraLarge) {
-    flex: 0 1 auto;
   }
 }
 
